# internal/api/creator/handler.go
@@ -1,10 +1,13 @@
 package creator
 
 import (
+	"fmt"
 	"net/http"
+	"strconv"
 
 	creatorservice "com.martdev.newsify/internal/service/creator"
 	"com.martdev.newsify/internal/util"
+	"github.com/go-chi/chi/v5"
 	"go.uber.org/zap"
 )
 
@@ -19,14 +22,14 @@ func NewCreatorHandler(service creatorservice.CreatorService, logger *zap.Sugare
 
 // Create news article godoc
 //
-//	@summary	Create news article by creators
+//	@summary	Creators publish news article
 //	@tags		creator
 //	@accept		json
 //	@param		payload	body	creator.CreatorArticleRequestPayload	true	"News info"
 //	@success	201
 //	@failure	400	{object}	util.ErrorResponse
 //	@failure	500	{object}	util.ErrorResponse
-//	@router		/creator/createnews [post]
+//	@router		/creator/createNews [post]
 func (h *CreatorHandler) createNewsArticle(w http.ResponseWriter, r *http.Request) {
 	var req creatorservice.CreatorArticleRequestPayload
 
@@ -46,4 +49,46 @@ func (h *CreatorHandler) createNewsArticle(w http.ResponseWriter, r *http.Reques
 	}
 
 	w.WriteHeader(http.StatusCreated)
+}
+
+// Get news article by id godoc
+//
+//	@summary	Creator get their news article using their id
+//	@tags		creator
+//	@accept		json
+//	@param		creatorID	path		int	true	"Creator ID"
+//	@param		articleID	path		int	true	"Article ID"
+//	@success	200			{object}	util.DataResponse{data=CreatorArticleResponsePayload}
+//	@failure	500			{object}	util.ErrorResponse
+//	@router		/creator/{creatorID}/getNewsArticleById/{articleID} [get]
+func (h *CreatorHandler) getNewsArticleById(w http.ResponseWriter, r *http.Request) {
+	creatorIDParam := chi.URLParam(r, "creatorID")
+	fmt.Printf("creatorID is %s", creatorIDParam)
+	creatorID, err := strconv.ParseInt(creatorIDParam, 10, 64)
+	if err != nil {
+		util.BadRequestErrorResponse(w, r, err, h.logger)
+		return
+	}
+
+	articleIDParam := chi.URLParam(r, "articleID")
+	articleID, err := strconv.ParseInt(articleIDParam, 10, 64)
+	if err != nil {
+		util.BadRequestErrorResponse(w, r, err, h.logger)
+		return
+	}
+
+	newsArticle, err := h.service.GetNewsArticleById(r.Context(), articleID, creatorID)
+	if err != nil {
+		switch err {
+		case util.ErrorNotFound:
+			util.NotFoundErrorResponse(w, r, err, h.logger)
+		default:
+			util.InternalServerErrorResponse(w, r, err, h.logger)
+		}
+		return
+	}
+
+	if err := util.JSONResponse(w, http.StatusOK, newsArticle); err != nil {
+		util.InternalServerErrorResponse(w, r, err, h.logger)
+	}
 }
