# internal/api/creator/routes.go
@@ -4,6 +4,9 @@ import "github.com/go-chi/chi/v5"
 
 func (h *CreatorHandler) RegisterCreatorRoutes(r chi.Router) {
 	r.Route("/creator", func(r chi.Router) {
-		r.Post("/createnews", h.createNewsArticle)
+		r.Post("/createNews", h.createNewsArticle)
+		r.Route("/{creatorId}", func(r chi.Router) {
+			r.Get("/getNewsArticleById/{articleID}", h.getNewsArticleById)
+		})
 	})
 }
